Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -186,14 +186,14 @@
        "'CEO'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "\"ce\""
+    "\"ceo\".upper()"
    ]
   },
   {
